--- a/contact.html
+++ b/contact.html
@@ -1,65 +1,77 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Contact</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-<script src="https://kit.fontawesome.com/88c21b2bb9.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="styles.css">
-  </head>
-  <body>
-    <ul class="nav nav-pills nav-fill">
-  <li class="nav-item">
-    <a class="nav-link" aria-current="page" href="index.html"><i class="fa-solid fa-house"></i>Home</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#">Plumeria Room</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#">Maile Room</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link active" href="contact.html"><i class="fa-solid fa-envelope"></i>Contact Us</a>
-  </li>
-</ul>
-<div class="big">
-  <div class="article">
-    <article>
-    <h1>Contact Us</h1>
-    <p>For booking and/or reservation requests, please email us & provide the number of nights you wish to stay & your check out day & date along with any questions you may have. Phone numbers are requested in case of any email address errors for us to be able to reply promptly to you. </p>
-</article>
-<form class="form" action="index.html" method="get">
-  <div class="name">
-  <div class="mb-3">
-  <label for="fname" class="fname">Frist Name:</label>
-  <input type="text" class="form-control" id="fname" placeholder="Frist Name">
-</div>
-<div class="mb-3">
-<label for="lname" class="lname">Last Name:</label>
-<input type="text" class="form-control" id="lname" placeholder="Last Name">
-</div>
-</div>
-<div class="mb-3">
-<label for="email" class="email">Email address</label>
-<input type="email" class="form-control" id="fname" placeholder="name@example.com">
-</div>
-  <div class="mb-3">
-  <label for="number" class="number">Phone Number:</label>
-  <input type="tel" class="form-control" id="number" placeholder="Phone Number">
-<div class="submit">
-  <input type="submit" name="submit" value="submit">
-</div>
-</div>
-</form>
-</div>
-<div class="map">
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3714.1847950862316!2d-157.74928008534022!3d21.421980279614417!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7c0015399eb53f0b%3A0xf8b93ccbb6bb3ebe!2s804%20Mokapu%20Rd%2C%20Kailua%2C%20HI%2096734!5e0!3m2!1sen!2sus!4v1658721477522!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-</div>
-</div>
-    <footer>
-  <p>    Address: 804 Mokapu Road • Kailua HI 96734 &nbsp; Eamil: &nbsp; <a href="mailto:paradisepalmbnb@gmail.com">paradisepalmbnb@gmail.com</a> &nbsp; Phone: &nbsp; <a href="tel:+18082611431">808-261-1431</a>
-    </footer>
- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-  </body>
+
+<head>
+  <!--
+    Author: Alexis Pearson
+    Date: 7-25-2022
+
+    Filename: contact.html
+   -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Contact</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  <script src="https://kit.fontawesome.com/88c21b2bb9.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+  <ul class="nav nav-pills nav-fill">
+    <li class="nav-item">
+      <a class="nav-link" aria-current="page" href="index.html"><i class="fa-solid fa-house"></i>Home</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Plumeria Room</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Maile Room</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link active" href="contact.html"><i class="fa-solid fa-envelope"></i>Contact Us</a>
+    </li>
+  </ul>
+  <div class="big">
+    <div class="article">
+      <article>
+        <h1>Contact Us</h1>
+        <p>For booking and/or reservation requests, please email us & provide the number of nights you wish to stay & your check out day & date along with any questions you may have. Phone numbers are requested in case of any email address errors for
+          us to be able to reply promptly to you. </p>
+      </article>
+      <form class="form" action="index.html" method="get">
+        <div class="name">
+          <div class="mb-3">
+            <label for="fname" class="fname">Frist Name:</label>
+            <input type="text" class="form-control" id="fname" placeholder="Frist Name">
+          </div>
+          <div class="mb-3">
+            <label for="lname" class="lname">Last Name:</label>
+            <input type="text" class="form-control" id="lname" placeholder="Last Name">
+          </div>
+        </div>
+        <div class="mb-3">
+          <label for="email" class="email">Email address</label>
+          <input type="email" class="form-control" id="email" placeholder="name@example.com">
+        </div>
+        <div class="mb-3">
+          <label for="number" class="number">Phone Number:</label>
+          <input type="tel" class="form-control" id="number" placeholder="Phone Number">
+          <div class="submit">
+            <input type="submit" name="submit" value="submit">
+          </div>
+        </div>
+      </form>
+    </div>
+    <div class="map">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3714.1847950862316!2d-157.74928008534022!3d21.421980279614417!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7c0015399eb53f0b%3A0xf8b93ccbb6bb3ebe!2s804%20Mokapu%20Rd%2C%20Kailua%2C%20HI%2096734!5e0!3m2!1sen!2sus!4v1658721477522!5m2!1sen!2sus"
+        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+  </div>
+  <footer>
+    <p> Address: 804 Mokapu Road • Kailua HI 96734 &nbsp; Eamil: &nbsp; <a href="mailto:paradisepalmbnb@gmail.com">paradisepalmbnb@gmail.com</a> &nbsp; Phone: &nbsp; <a href="tel:+18082611431">808-261-1431</a>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+</body>
+
 </html>
