--- a/index.html
+++ b/index.html
@@ -1,136 +1,146 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Home</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-<script src="https://kit.fontawesome.com/88c21b2bb9.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="styles.css">
-  </head>
-  <body>
-    <ul class="nav nav-pills nav-fill">
-  <li class="nav-item">
-    <a class="nav-link active" aria-current="page" href="index.html"><i class="fa-solid fa-house"></i>Home</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#">Plumeria Room</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#">Maile Room</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="contact.html"><i class="fa-solid fa-envelope"></i>Contact Us</a>
-  </li>
-</ul>
-    <header>
+
+<head>
+  <!--
+      Author: Alexis Pearson
+      Date: 7-25-2022
+
+      Filename: contact.html
+     -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Home</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  <script src="https://kit.fontawesome.com/88c21b2bb9.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+  <ul class="nav nav-pills nav-fill">
+    <li class="nav-item">
+      <a class="nav-link active" aria-current="page" href="index.html"><i class="fa-solid fa-house"></i>Home</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Plumeria Room</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Maile Room</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="contact.html"><i class="fa-solid fa-envelope"></i>Contact Us</a>
+    </li>
+  </ul>
+  <header>
     <h1>Kailua Kove <br /> Licensed Bed & Breakfast</h1>
-  <p>Just a 5-minute walk away to the beach...
-Our local beach is pretty quiet with locals going for their daily walk or walking their dogs.
-Turn left and walk past the 2 buildings and the newly opened Nico’s Restaurant, cross the bridge and after the first street on your left,  you will find a narrow pathway that has access to the beach.
-</p>
-</header>
-    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
-  <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-  </div>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="images/kailua2.jpg" class="d-block w-100" alt="Picture of kaiula">
-      <div class="carousel-caption">
-        <h5>Kailua Kove B&B</h5>
+    <p>Just a 5-minute walk away to the beach...
+      Our local beach is pretty quiet with locals going for their daily walk or walking their dogs.
+      Turn left and walk past the 2 buildings and the newly opened Nico’s Restaurant, cross the bridge and after the first street on your left, you will find a narrow pathway that has access to the beach.
+    </p>
+  </header>
+  <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="images/kailua2.jpg" class="d-block w-100" alt="Picture of kaiula">
+        <div class="carousel-caption">
+          <h5>Kailua Kove B&B</h5>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="images/kailua3.jpg" class="d-block w-100" alt="Piceure of Kailua">
+        <div class="carousel-caption">
+          <h5>Backyard Pool Time & Barbecue</h5>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="images/kailua4.jpg" class="d-block w-100" alt="Piceure of Kailua">
+        <div class="carousel-caption">
+          <h5>Beautiful Lanikai Beach within waling distance</h5>
+        </div>
       </div>
     </div>
-    <div class="carousel-item">
-      <img src="images/kailua3.jpg" class="d-block w-100" alt="Piceure of Kailua">
-      <div class="carousel-caption">
-        <h5>Backyard Pool Time & Barbecue</h5>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+  <div class="cards">
+    <div class="card" style="width: 18rem;">
+      <img src="images/plumeriaRoom.jpg" class="card-img-top" alt="Piceture of Hotel Room">
+      <div class="card-body">
+        <h5 class="card-title">Plumeria Room</h5>
+        <p class="card-text">Queen bed, private bathroom with shower, WiFi, cable TV, ceiling fan, and sliding door to lanai.</p>
+        <a href="#" class="card-link">See More</a>
       </div>
     </div>
-    <div class="carousel-item">
-      <img src="images/kailua4.jpg" class="d-block w-100" alt="Piceure of Kailua">
-      <div class="carousel-caption">
-        <h5>Beautiful Lanikai Beach within waling distance</h5>
+    <div class="card" style="width: 18rem;">
+      <img src="images/maileRoom1.jpg" class="card-img-top" alt="Picture Of Hotel Room">
+      <div class="card-body">
+        <h5 class="card-title">Maile Room</h5>
+        <p class="card-text">Large room with king bed, small table with desk, WiFi, cable TV, ceiling fan, & sliding door to lanai.</p>
+        <a href="#" class="card-link">See More</a>
+      </div>
+    </div>
+    <div class="card" style="width: 18rem;">
+      <img src="images/kailua1.jpg" class="card-img-top" alt="Picture Of Plam Tree">
+      <div class="card-body">
+        <h5 class="card-title">Contact Us</h5>
+        <p class="card-text">Located in Kailua on the South Shore of Oahu just a 5 minute walk to beautiful Lanikai Beach</p>
+        <a href="contact.html" class="card-link">See More</a>
       </div>
     </div>
   </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>
-<div class="cards">
-<div class="card" style="width: 18rem;">
-  <img src="images/plumeriaRoom.jpg" class="card-img-top" alt="Piceture of Hotel Room">
-  <div class="card-body">
-    <h5 class="card-title">Plumeria Room</h5>
-    <p class="card-text">Queen bed, private bathroom with shower, WiFi, cable TV, ceiling fan, and sliding door to lanai.</p>
-    <a href="#" class="card-link">See More</a>
-  </div>
-</div>
-<div class="card" style="width: 18rem;">
-  <img src="images/maileRoom1.jpg" class="card-img-top" alt="Picture Of Hotel Room">
-  <div class="card-body">
-    <h5 class="card-title">Maile Room</h5>
-    <p class="card-text">Large room with king bed, small table with desk, WiFi, cable TV, ceiling fan, & sliding door to lanai.</p>
-    <a href="#" class="card-link">See More</a>
-  </div>
-</div>
-<div class="card" style="width: 18rem;">
-  <img src="images/kailua1.jpg" class="card-img-top" alt="Picture Of Plam Tree">
-  <div class="card-body">
-    <h5 class="card-title">Contact Us</h5>
-    <p class="card-text">Located in Kailua on the South Shore of Oahu just a 5 minute walk to beautiful Lanikai Beach</p>
-    <a href="contact.html" class="card-link">See More</a>
-  </div>
-</div>
-</div>
-<div class="amenities">
-  <h1>Amenities</h1>
-  <div class="ul">
-    <div class="lone">
-      <ul>
-        <li>Gated Secured Home</li>
-        <li>Free Onsite Parking</li>
-        <li>Separate Entrance</li>
-        <li>Queen Size Bed</li>
-        <li>Air-Condition & Ceiling Fan</li>
-        <li>TV with Basic Cable</li>
-        <li>Free WiFi</li>
-      </ul>
+  <div class="amenities">
+    <h1>Amenities</h1>
+    <div class="ul">
+      <div class="lone">
+        <ul>
+          <li>Gated Secured Home</li>
+          <li>Free Onsite Parking</li>
+          <li>Separate Entrance</li>
+          <li>Queen Size Bed</li>
+          <li>Air-Condition & Ceiling Fan</li>
+          <li>TV with Basic Cable</li>
+          <li>Free WiFi</li>
+        </ul>
+      </div>
+      <div class="1three">
+        <ul>
+          <li>Kitchen Utensils (plates, glasses, silverware)</li>
+          <li>Toaster</li>
+          <li>Beach Towels</li>
+          <li>Beach Umbrella</li>
+          <li>Boogie Boards</li>
+          <li>Beach Chairs</li>
+          <li>Shampoo/Conditioner/Body Wash</li>
+        </ul>
+      </div>
+      <div class="ltwo">
+        <ul>
+          <li>Upscale Private Bathroom with Walk-In Shower</li>
+          <li>Kitchenette with Mini Fridge, Microwave</li>
+          <li>Keurig Coffeemaker</li>
+          <li>Free Continental Breakfast (self-serve)</li>
+          <li>Private Lanai with Garden View</li>
+          <li>Hair Dryer</li>
+        </ul>
+      </div>
     </div>
-  <div class="1three">
-    <ul>
-      <li>Kitchen Utensils (plates, glasses, silverware)</li>
-      <li>Toaster</li>
-      <li>Beach Towels</li>
-      <li>Beach Umbrella</li>
-      <li>Boogie Boards</li>
-      <li>Beach Chairs</li>
-      <li>Shampoo/Conditioner/Body Wash</li>
-    </ul>
   </div>
-  <div class="ltwo">
-    <ul>
-      <li>Upscale Private Bathroom with Walk-In Shower</li>
-      <li>Kitchenette with Mini Fridge, Microwave</li>
-      <li>Keurig Coffeemaker</li>
-      <li>Free Continental Breakfast (self-serve)</li>
-      <li>Private Lanai with Garden View</li>
-      <li>Hair Dryer</li>
-    </ul>
-  </div>
-</div>
-</div>
-<footer>
-<p>    <i class="fa-solid fa-location-dot"></i> 804 Mokapu Road • Kailua HI 96734 &nbsp; <i class="fa-solid fa-envelope"></i> &nbsp; <a href="mailto:paradisepalmbnb@gmail.com">paradisepalmbnb@gmail.com</a> &nbsp; <i class="fa-solid fa-phone"></i> &nbsp; <a href="tel:+18082611431">808-261-1431</a>
-</footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-  </body>
+  <footer>
+    <p> <i class="fa-solid fa-location-dot"></i> 804 Mokapu Road • Kailua HI 96734 &nbsp; <i class="fa-solid fa-envelope"></i> &nbsp; <a href="mailto:paradisepalmbnb@gmail.com">paradisepalmbnb@gmail.com</a> &nbsp; <i class="fa-solid fa-phone"></i>
+      &nbsp; <a href="tel:+18082611431">808-261-1431</a>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+</body>
+
 </html>
